--- a/public/css/contactos.css
+++ b/public/css/contactos.css
@@ -1,4 +1,4 @@
-/* Estilos para la aplicación de contactos - Estilo Trello */
+/* Estilos para la aplicación de contactos */
 .app-container {
   width: 100%;
   max-width: 1200px;
