--- a/public/css/themes.css
+++ b/public/css/themes.css
@@ -1,5 +1,5 @@
 :root {
-  /* Variables para el tema claro (default) - estilo Trello */
+  /* Variables para el tema claro (default) */
   --primary-color: #026aa7;
   --primary-light: #0079bf;
   --primary-dark: #055a8c;
@@ -26,7 +26,7 @@
 }
 
 [data-theme="dark"] {
-  /* Variables para el tema oscuro - estilo Trello Dark */
+  /* Variables para el tema oscuro */
   --primary-color: #1d2125;
   --primary-light: #282e33;
   --primary-dark: #0d1117;
